* Fixed up tag screen * Cleaned up sidebar spacing * Switch to a higher header line

--- a/src/public/stylesheets/blog.css
+++ b/src/public/stylesheets/blog.css
@@ -1,4 +1,5 @@
 #container a { color: #900; }
+#container a:hover { color: #700; }
 
 #login { 
 	background-color: #900;
@@ -8,7 +9,7 @@
 
 #login a { color: #fff; }
 
-#content h3 {
+#content h1 {
 	border-bottom: 1px solid #999;
 	color: #900;
 	font-family: Georgia, Verdana, Helvetica, Sans-Serif;
@@ -58,6 +59,17 @@
 	margin-top: 3px;
 }
 
+.post_summary {
+	padding: 4px 4px 8px 4px;
+}
+
+.post_summary h2 { 
+	font-size: 100%;
+	font-weight: bold;
+}
+
+.post_summary h2 a { text-decoration: none; }
+
 .post_tags {
 	font-size: 85%;
 	font-style: italic;
@@ -66,8 +78,4 @@
 
 .post_tags a:link, .post_tags a:visited {
 	text-decoration: none;
-}
-
-.post_tags a:hover, .post_tags a:active {
-	text-decoration: underline;
 }
